--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -2667,6 +2667,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>24. Kuantil</h2>\n",
+    "<ol>\n",
+    "  <li>Pengertian <code>Kuantil</code></li>\n",
+    "  <ul>\n",
+    "    <li><code>Kuantil</code> -> nilai - nilai data yang membagi data yang telah diurutkan sebelumnya menjadi beberapa bagian yang sama besar ukurannya</li>\n",
+    "  </ul>\n",
+    "  <li>Ukuran - Ukuran <code>Fraktil</code></li>\n",
+    "  <ul>\n",
+    "    <li><code>Kuartil</code> Kuantil yang membagi data menjadi <code>Empat</code> bagian sama besar</li>\n",
+    "    <li><code>Desil</code> Kuantil yang membagi data menjadi <code>Sepuluh</code> bagian sama besar</li>\n",
+    "    <li><code>Persentil</code> Kuantil yang membagi data menjadi <code>Seratus</code> bagian sama besar</li>\n",
+    "  </ul>\n",
+    "</ol>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Menampilkan nilai median dari data Pendapatan menggunakan methode quantile: \n",
+      "Nilai Median data Pendapatan = 875000.0\n",
+      "Nilai Q2 data Pendapatan = 875000.0\n",
+      "\n",
+      "Menampilkan nilai Q2 dan median dari data Pendapatan menggunakan numpy: \n",
+      "Nilai Median data Pendapatan = 875000.0\n",
+      "Nilai Q2 data Pendapatan = 875000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mencari median atau 50% dari data menggunakan pandas\n",
+    "print(f\"Menampilkan nilai median dari data Pendapatan menggunakan methode quantile: \")\n",
+    "print(f\"Nilai Median data Pendapatan = {raw_data['Pendapatan'].median()}\")\n",
+    "print(f\"Nilai Q2 data Pendapatan = {raw_data['Pendapatan'].quantile(0.5)}\")\n",
+    "\n",
+    "# mencari median atau 50% dari data menggunakan numpy\n",
+    "print(f\"\\nMenampilkan nilai Q2 dan median dari data Pendapatan menggunakan numpy: \")\n",
+    "print(f\"Nilai Median data Pendapatan = {np.median(raw_data['Pendapatan'])}\")\n",
+    "print(f\"Nilai Q2 data Pendapatan = {np.quantile(raw_data['Pendapatan'], q=0.5)}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
