Agregasi Data dengan method .agg()

--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -2717,6 +2717,190 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>25. Agregasi Data</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Menampilkan nilai rata - rata dan median data Pendapatan dan Harga: \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Pendapatan</th>\n",
+       "      <td>1160000.0</td>\n",
+       "      <td>875000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Harga</th>\n",
+       "      <td>197500.0</td>\n",
+       "      <td>200000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 mean    median\n",
+       "Pendapatan  1160000.0  875000.0\n",
+       "Harga        197500.0  200000.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Menampilkan nilai rata - rata dan median data Pendapatan dan Harga Tiap Produk: \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Pendapatan</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Harga</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Produk</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>550000.0</td>\n",
+       "      <td>600000.0</td>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>100000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>875000.0</td>\n",
+       "      <td>875000.0</td>\n",
+       "      <td>150000.0</td>\n",
+       "      <td>150000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>850000.0</td>\n",
+       "      <td>900000.0</td>\n",
+       "      <td>200000.0</td>\n",
+       "      <td>200000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>2100000.0</td>\n",
+       "      <td>1200000.0</td>\n",
+       "      <td>250000.0</td>\n",
+       "      <td>250000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E</th>\n",
+       "      <td>1200000.0</td>\n",
+       "      <td>1100000.0</td>\n",
+       "      <td>300000.0</td>\n",
+       "      <td>300000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Pendapatan                Harga          \n",
+       "             mean     median      mean    median\n",
+       "Produk                                          \n",
+       "A        550000.0   600000.0  100000.0  100000.0\n",
+       "B        875000.0   875000.0  150000.0  150000.0\n",
+       "C        850000.0   900000.0  200000.0  200000.0\n",
+       "D       2100000.0  1200000.0  250000.0  250000.0\n",
+       "E       1200000.0  1100000.0  300000.0  300000.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# menghitung rata - rata dan median Pendapatan dan Harga\n",
+    "print(f\"Menampilkan nilai rata - rata dan median data Pendapatan dan Harga: \")\n",
+    "display(raw_data[[\"Pendapatan\",\"Harga\"]].agg([\"mean\", \"median\"]).T)\n",
+    "\n",
+    "# menghitung rata - rata dan median Pendapatan, Harga dari Tiap Produk\n",
+    "print(f\"\\nMenampilkan nilai rata - rata dan median data Pendapatan dan Harga Tiap Produk: \")\n",
+    "display(raw_data.groupby([\"Produk\"])[[\"Pendapatan\",\"Harga\"]].agg([\"mean\",\"median\"]))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
