Ukuran Sebaran (Measures of Dispertion)

--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2218,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2472,7 +2472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2634,7 +2634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2687,7 +2687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2725,7 +2725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2901,10 +2901,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "<h2>26. Quiz</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mencari kuartil ke-1 dan ke-3 dari kolom Pendapatan: \n",
+      "0.25     675000.0\n",
+      "0.75    1125000.0\n",
+      "Name: Pendapatan, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mencari kuartil ke-1 dan ke-3 dari kolom Pendapatan maka kode yang tepat adalah\n",
+    "print(f\"mencari kuartil ke-1 dan ke-3 dari kolom Pendapatan: \")\n",
+    "print(raw_data[\"Pendapatan\"].quantile([0.25, 0.75]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>27. Ukuran Sebaran (Measures of Dispersion)</h2>\n",
+    "<h3>Penggunaan <code>Ukuran Sebaran</code></h3>\n",
+    "<ul>\n",
+    "  <li>Tipe Data <code>Nominal</code> & <code>Ordinal</code></li>\n",
+    "  <ol>\n",
+    "    <li>Proporsi Kategori (Categorical Proportion)</li>\n",
+    "    <li>Persen Proporsi (Percent Proportion)</li>\n",
+    "    <li>Rasio Variasi (Variation Ratio)</li>\n",
+    "  </ol>\n",
+    "  <li>Tipe Data <code>Interval</code> & <code>Rasio</code></li>\n",
+    "  <ol>\n",
+    "    <li>Rentang (Range)</li>\n",
+    "    <li>Variasi (Variance)</li>\n",
+    "    <li>Deviasi Baku (Standard Deviation)</li>\n",
+    "  </ol>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
