--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -2954,6 +2954,41 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<h2>28. Proporsi Kategori</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mencari proporsi tiap Produk: \n",
+      "Produk\n",
+      "D    0.25\n",
+      "A    0.20\n",
+      "B    0.20\n",
+      "C    0.20\n",
+      "E    0.15\n",
+      "Name: count, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mencari proporsi tiap Produk\n",
+    "print(f\"Mencari proporsi tiap Produk: \")\n",
+    "print(raw_data[\"Produk\"].value_counts()/raw_data.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
