Ukuran Sebaran Pada Data Interval dan Rasio

--- a/statistic_using_python_for_data_science.ipynb
+++ b/statistic_using_python_for_data_science.ipynb
@@ -2985,6 +2985,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>29. Ukuran Sebaran Pada Data Interval dan Rasio</h2>\n",
+    "<h4><code>Rentang (Range)</code></h4>\n",
+    "<ul>\n",
+    "  <li><code>Rentang</code> : Jarak antara nilai maksimum dengan nilai minimum</li>\n",
+    "  <li>Semakin besar nilai <code>rentang</code> semakin besar pula nilai<code>sebaran</code> datanya</li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mencari nilai rentang dari kolom 'Pendapatan'\n",
+      "Nilai rentang data Pendapatan = 6050000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mencari nilai rentang dari kolom 'Pendapatan'\n",
+    "print(f\"Mencari nilai rentang dari kolom 'Pendapatan'\")\n",
+    "print(f\"Nilai rentang data Pendapatan = {raw_data['Pendapatan'].max() - raw_data['Pendapatan'].min()}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
